--- a/website/src/pages/docs/server/integrations/drizzle.mdx
+++ b/website/src/pages/docs/server/integrations/drizzle.mdx
@@ -1,4 +1,4 @@
-# drizzle
+# Integrating Drizzle with Fuse
 
 With SQL datasources multiple ORM's can be used, one of them being
 [drizzle](https://orm.drizzle.team/docs/overview), let's go over a small
