--- a/website/src/pages/docs/server/integrations/index.mdx
+++ b/website/src/pages/docs/server/integrations/index.mdx
@@ -14,7 +14,7 @@ const Node = node<SourceType>({
 })
 ```
 
-However, manually typing the `SourceType` for the underlying data source is unnecessary **if your data source is already typed with TypeScript.** We have written guides on how to get TypeScript types for some common data sources that you might interact with to avoid having to manually type the `SourceType`:
+However, manually typing the `SourceType` for the underlying data source is unnecessary if your data source is already typed with TypeScript. We have written guides on **how to get TypeScript types for some common data sources** that you might interact with to avoid having to manually type the `SourceType`:
 
 - [gRPC](/docs/server/integrations/grpc)
 - [REST APIs](/docs/server/integrations/rest)
