--- a/website/src/pages/docs/client/other/http.mdx
+++ b/website/src/pages/docs/client/other/http.mdx
@@ -1,8 +1,8 @@
-# HTTP
+# Raw HTTP access to your Fuse API
 
 Fuse creates a standard GraphQL API under the hood, which means you can use any HTTP client to construct a request and fetch data from your API.
 
-Note that we **strongly recommend using a GraphQL client if your application is a web or mobile app**. Practically all popular mobile and web frameworks and languages have a GraphQL client.
+Note that we **strongly recommend using a GraphQL client if one is available**. Practically all popular mobile and web frameworks and languages have a GraphQL client.
 
 ## How to query your GraphQL API via HTTP
 
