--- a/website/src/pages/docs/client/index.mdx
+++ b/website/src/pages/docs/client/index.mdx
@@ -2,10 +2,10 @@ import { Explain } from "@/components/Explain"
 
 # Querying from the client
 
-Fuse **generates a fully type-safe TypeScript client** (more languages coming) during `fuse dev` and `fuse build` that is compatible with all popular JavaScript-based frameworks (see [how to opt-out of client code generation](#disabling-the-client-code-generation) below):
+Fuse **generates a fully type-safe TypeScript GraphQL client** (more languages coming) during `fuse dev` and `fuse build` that is compatible with all popular JavaScript-based frameworks (see [how to opt-out of client code generation](#disabling-the-client-code-generation) below):
 
 - [React & React Native](/docs/client/javascript/react)
-- [Next.js](/docs/client/javascript/nextjs)
+- [Next.js](/docs/client/javascript/nextjs) with full support for Pages Router, App Router, and React Server Components
 - [Vue](/docs/client/javascript/vue)
 - [Angular](/docs/client/javascript/angular)
 
