--- a/website/src/pages/docs/server/integrations/index.mdx
+++ b/website/src/pages/docs/server/integrations/index.mdx
@@ -22,15 +22,15 @@ However, manually typing the `SourceType` for the underlying data source is unne
 - [Drizzle ORM (PostgreSQL, MySQL, SQLite)](/docs/server/integrations/drizzle)
 - [Kysely (any SQL database)](/docs/server/integrations/kysely)
 
-## What about turning data sources into GraphQL automatically?
+## Fuse does not turn data sources into GraphQL automatically
 
-We considered adding support for automatically turning some common data sources into GraphQL, similar to what Hasura, Wundergraph, and others do. (see [PR #103](https://github.com/StellateHQ/fuse.js/pull/103))
+Converting a data source into an API automatically almost always leads to a suboptimal result because the way underlying data sources manage their data does not match the way that clients want to consume that data.
 
-However, using a "1:1 data source to GraphQL converter" almost always leads to a suboptimal GraphQL schema. In fact, in practice we have seen an opposite 80/20 rule: usually, API layers only expose some small percentage (~20%) of the underlying data directly, but the majority (~80%) of the underlying data is transformed in a way that matches more closely to the client's needs.
+In practice, we observe the 80/20 rule: APIs expose some minor percentage (~20%) of the underlying data directly, and the majority (~80%) of the data is exposed in a way that matches more closely to the client's needs.
 
-Thus, using a "1:1 data source to GraphQL converter" is not a good idea in practice, as you're optimizing for the minority case and implicitly encouraging creating an API that doesn't match what clients actually need.
+That's why Fuse is optimized for and designed to be the easiest way to build a transformation layer that takes any underlying data source and turn it into an interface that matches what clients need with end-to-end typesafety.
 
-Instead, we recommend using technologies that create TypeScript types for underlying data sources (like `connect-es` for gRPC, Prisma/Drizzle/Kysely for SQL databases), which drastically simplifies integrating them with Fuse.
+To simplify integrating data sources into your Fuse API, instead of automatic converters, we recommend using technologies that create TypeScript types for underlying data sources (like `connect-es` for gRPC, Prisma/Drizzle/Kysely for SQL databases,…), which drastically simplifies integrating them with Fuse.
 
 In fact, to give you an example, here is how to interact with a database with Drizzle without any need for manual typing at all:
 
