--- a/website/src/pages/docs/server/integrations/index.mdx
+++ b/website/src/pages/docs/server/integrations/index.mdx
@@ -26,7 +26,7 @@ However, manually typing the `SourceType` for the underlying data source is unne
 
 Converting a data source into an API automatically almost always leads to a suboptimal result because the way underlying data sources manage their data does not match the way that clients want to consume that data.
 
-In practice, we observe the 80/20 rule: APIs expose some minor percentage (~20%) of the underlying data directly, and the majority (~80%) of the data is exposed in a way that matches more closely to the client's needs.
+In practice, we observe the 80/20 rule: APIs expose some minor percentage (~20%) of the underlying data directly, and the majority (~80%) of the data is transformed in some way to match more closely to the client's needs.
 
 That's why Fuse is optimized for and designed to be the easiest way to build a transformation layer that takes any underlying data source and turn it into an interface that matches what clients need with end-to-end typesafety.
 
