--- a/website/src/pages/docs/deployment/index.mdx
+++ b/website/src/pages/docs/deployment/index.mdx
@@ -6,9 +6,10 @@ Your Fuse API is built in TypeScript and can theoretically be compiled to run on
 - [Next.js API Routes](/docs/deployment/nextjs)
 - [Lambda](/docs/deployment/lambda)
 - [Cloudflare Workers](/docs/deployment/cloudflare-workers)
+- [Bun](/docs/deployment/bun)
 
 TL;DR: The `fuse build` command takes an `--adapter` argument that will compile your API to run on the specified runtime:
 
 ```sh
-fuse build --adapter node/lambda/cloudflare
+fuse build --adapter node/lambda/cloudflare/bun
 ```
