--- a/website/src/pages/docs/server/integrations/drizzle.mdx
+++ b/website/src/pages/docs/server/integrations/drizzle.mdx
@@ -1,6 +1,7 @@
 # Integrating Drizzle with Fuse
 
-[Drizzle ORM](https://orm.drizzle.team/docs/overview) is a popular option to access SQL databases in a type-safe way in Node.js. Fetching data from an SQL database with Drizzle in Fuse allows you to avoid having to type any underlying source type.
+[Drizzle ORM](https://orm.drizzle.team/docs/overview) is an option to access SQL databases in a type-safe way in Node.js.
+Fetching data from an SQL database with Drizzle in Fuse allows you to avoid having to type any underlying source type.
 
 ## Getting the TypeScript types for a table
 
