--- a/website/src/pages/docs/server/integrations/kysely.mdx
+++ b/website/src/pages/docs/server/integrations/kysely.mdx
@@ -1,6 +1,6 @@
 # Integrating Kysely with Fuse
 
-[Kysely](https://orm.drizzle.team/docs/overview) is an option to access SQL databases in a type-safe way in Node.js.
+[Kysely](https://kysely.dev/docs/intro) is an option to access SQL databases in a type-safe way in Node.js.
 Fetching data from an SQL database with Kysely in Fuse allows you to avoid having to type any underlying source type.
 
 ## Getting the TypeScript types for a table
