--- a/website/src/pages/docs/client/javascript/vue.mdx
+++ b/website/src/pages/docs/client/javascript/vue.mdx
@@ -1,4 +1,37 @@
 # Vue
 
+Fuse supports querying your data from Vue, as long as your querying library supports typed-document nodes then
+your output and variables will be typed. Some of these clients include [@urql/vue](https://formidable.com/open-source/urql/docs/basics/vue) and
+[vue/apollo](http://apollo.vuejs.org/).
 
-TODO
+Constructing a typed-document-node for a query:
+
+```tsx
+import { graphql } from '../fuse'
+import { Avatar } from './components/Avatar'
+
+const UserQuery = graphql(`
+  query User ($id: ID!) {
+    user(id: $id) {
+      name
+      ...Avatar_UserFields
+    }
+  }
+`)
+```
+
+and for a fragment:
+
+```tsx
+import { graphql, useFragment, FragmentType } from '../../fuse'
+
+const AvatarFragment = graphql(`
+  fragment Avatar_UserFields on User {
+    name
+    avatarUrl
+  }
+`)
+
+// Derive the input-type: FragmentType<typeof AvatarFragment>
+// Apply fragment-masking: useFragment(AvatarFragment, user);
+```
