--- a/website/src/pages/docs/fuse-method/vs-backend-for-frontends.mdx
+++ b/website/src/pages/docs/fuse-method/vs-backend-for-frontends.mdx
@@ -1,4 +1,4 @@
-# Backend-for-Frontends (BFFs) vs. Data layers
+# Backend-for-Frontends (BFFs) vs. the Fuse Method
 
 ![This shows on the left the classic workflow where we have boxes representing 'mobile', 'iOS' and 'web' development teams. These boxes all individually connect to their own BFF box which in turn connect to all the datasources of the backend teams. On the right we have the 'fuse' diagram where all the frontend teams connect to a node called 'fuse' which in turn connects all backend datasources.](/images/data-layers-vs-bffs.png)
 
@@ -11,10 +11,10 @@ While BFFs solve the [aforementioned three problems](/docs/data-layers), [as Le
 3. Making it difficult to create new frontends as that requires bootstrapping another BFF
 4. Requiring careful coordination of deployments between the client and the BFF as they are tightly coupled
 
-Having one central data layer (instead of one per frontend) circumvents these problems, but the concern with that centralization was that it would “become bloated by handling multiple concerns.” ([source](https://samnewman.io/patterns/architectural/bff/))
+Having one central API (instead of one per frontend) circumvents these problems, but the concern with that centralization was that it would “become bloated by handling multiple concerns.” ([source](https://samnewman.io/patterns/architectural/bff/))
 
 That is where GraphQL comes into the picture.
 
 GraphQL APIs enable clients to query for the exact data their UI needs. That means “becoming bloated by handling multiple concerns” is not an issue because GraphQL APIs don’t contain any specific frontend’s concerns.
 
-Building a central data layer based on GraphQL is the best of all worlds: it solves the three problems at the interface between backend and frontend without the added challenges introduced by using BFFs.
+Building a central API based on GraphQL is the best of all worlds: it solves the three problems at the interface between backend and frontend without the added challenges introduced by using BFFs.
