--- a/website/src/pages/docs/client/javascript/nextjs.mdx
+++ b/website/src/pages/docs/client/javascript/nextjs.mdx
@@ -1,4 +1,10 @@
-# Client components
+# Querying from Next.js
+
+Fuse supports querying your API from Next.js's new [App Router](#app-router) (including dedicated support for [server components](#server-components) and [server actions](#server-actions)) and from the original [Pages Router](#pages-router).
+
+## App router
+
+### Client components
 
 When you are leveraging the `use client` directive in a `/app` component we have opted out
 of using server-components. This means we are going back to the traditional way of
@@ -140,3 +146,137 @@ export async function Greet(args: { name: string }) {
   return <button onClick={() => execute({ name })}>Greet</button>
 }
 ```
+
+### Server components
+
+# Server Components
+
+When using React server components, Fuse skips the intermediate step of reaching out to an
+API endpoint and instead executes the GraphQL directly in the server component renderer:
+
+```tsx
+import { graphql } from '@/fuse'
+import { execute } from '@/fuse/server'
+
+const UserQuery = graphql(`
+  query User($id: ID!) {
+    user(id: $id) {
+      id
+      name
+      firstName
+      avatarUrl
+    }
+  }
+`)
+
+export default async function Page() {
+  const result = await execute({ query: UserQuery, variables: { id: '1' } })
+}
+```
+
+This is the base way to query your components through server-components, you can now
+pass on the data to child components.
+
+### Server actions
+
+We can also invoke mutations as part of a [`server-action`](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations#how-server-actions-work)
+This requires us to create a new file, for example in this example we'll call a mutation with a name
+argument that returns us `Hello ${args.name}`.
+
+We create `actions/hello.ts` and give it the content of
+
+```ts
+'use server'
+
+import { graphql } from '@/fuse'
+import { execute } from '@/fuse/server'
+import { redirect } from 'next/navigation'
+
+const SayHello = graphql(`
+  mutation Hello($name: String!) {
+    sayHello(name: $name)
+  }
+`)
+
+export async function sayHello(args: { name: string }) {
+  const result = await execute({ query: SayHello, variables: { name: args.name } })
+
+  console.log(result.data?.sayHello)
+
+  // After completing our mutation we perform a redirect
+  redirect('/')
+}
+```
+
+We can use this on the client by doing
+
+```tsx
+import { sayHello } from './actions/sayHello'
+
+const Component = ({ name }) => {
+  const sayHelloFuse = sayHello.bind(undefined, { name: name || 'fuse' })
+  return (
+    <form action={sayHelloFuse}>
+      <button type='submit'>Say hello and redirect to /</button>
+    </form>
+  )
+}
+```
+
+## Pages Router
+
+Similar to the `/app` directory we can leverage `useQuery` the difference being that for server-side
+data we will query manually from `getServerSideProps` or `getStaticProps` and pass it into the component.
+
+```tsx
+import {
+  useQuery,
+  withGraphQLClient,
+  initGraphQLClient,
+  ssrExchange,
+  cacheExchange,
+  fetchExchange,
+} from '@/fuse/pages'
+import { graphql } from '@/fuse'
+
+const UserQuery = graphql(`
+  query User ($id: ID!) {
+    user(id: $id) {
+      ...Avatar_UserFields
+    }
+  }
+`)
+
+function User() {
+  const [result] = useQuery({
+    query: UserQuery,
+    variables: { id: '1' },
+  })
+}
+
+export async function getServerSideProps() {
+  const ssrCache = ssrExchange({ isClient: false })
+  const client = initGraphQLClient({
+    url: 'http://localhost:3000/api/fuse',
+    exchanges: [cacheExchange, ssrCache, fetchExchange],
+  })
+
+  await client.query(UserQuery, { id: '1' }).toPromise()
+
+  const graphqlState = ssrCache.extractData()
+
+  return {
+    props: {
+      graphqlState,
+    },
+  }
+}
+
+export default withGraphQLClient((ssrCache) => ({
+  url: 'http://localhost:3000/api/fuse',
+}))(Page)
+```
+
+Performing mutations is done in the same way as in the `/app` directory,
+with the same caveats.
+
